CMAKE_MINIMUM_REQUIRED(VERSION 2.6.2)
IF(COMMAND CMAKE_POLICY)
  CMAKE_POLICY(SET CMP0003 NEW)
ENDIF(COMMAND CMAKE_POLICY)  

PROJECT(LABEL_FUSION)

FIND_PACKAGE(ITK REQUIRED)
INCLUDE(${ITK_USE_FILE})

ADD_EXECUTABLE(label_fusion LabelFusion.cxx)

SET(COMMON_LIBS
  ITKCommon
  ITKBasicFilters
  ITKIO
  ITKNumerics)

TARGET_LINK_LIBRARIES(label_fusion ${COMMON_LIBS})
